fix rename not showing

--- a/src/app.scss
+++ b/src/app.scss
@@ -55,6 +55,8 @@ body {
         color: #f9f9f9;
         box-sizing: border-box;
 
+        
+
         .button.icon {
             cursor: pointer;
             font-size: 22px;
@@ -91,7 +93,11 @@ body {
                 }
             }
 
-            &:hover {
+            &.active {
+                color:$elegant-blue;
+            }
+
+            &:hover, &.active {
                 &:after {
                     color: $elegant-blue;
                 }
@@ -113,9 +119,11 @@ body {
                 align-self: center;
             }
 
-            &:hover {
+            &:hover, &.active {
                 background-color: #323232;
             }
+
+            
         }
     }
 
@@ -125,7 +133,7 @@ body {
         flex-grow: 1;
 
         .panel:is(.right, .left) {
-            flex-basis: 225px;
+            width: 225px;
         }
 
         .middle {
